--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -1,11 +1,12 @@
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   height: 10%;
   border-bottom: 2px solid;
 }
 
 .navbar a {
   margin: 0 24px;
+  text-decoration: none;
 }
