--- a/src/component/table/table.css
+++ b/src/component/table/table.css
@@ -12,8 +12,26 @@
   padding: 10px 0;
 }
 
-.table tbody tr:nth-of-type(odd) {
+.table tbody tr:nth-of-type(odd),
+.table-ip tbody tr:nth-of-type(odd) {
   background-color: #e5eaef;
+}
+
+.table-ip {
+  width: 50%;
+  margin: 0 auto;
+  background-color: #fbfcfc;
+  border-radius: 24px;
+  text-align: center;
+  min-height: 64px;
+  box-shadow: 0 0 20px rgb(0 0 0 / 15%);
+}
+
+.small-table {
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .pagination ul {
