--- a/src/component/table/table.css
+++ b/src/component/table/table.css
@@ -27,6 +27,10 @@
   box-shadow: 0 0 20px rgb(0 0 0 / 15%);
 }
 
+.back-button {
+  margin: 16px auto;
+}
+
 .small-table {
   height: 60vh;
   display: flex;
