--- a/src/component/table/table.css
+++ b/src/component/table/table.css
@@ -1,6 +1,7 @@
 .table {
   width: 80%;
   margin: 0 auto;
+  padding: 8px;
   background-color: #fbfcfc;
   border-radius: 24px;
   text-align: center;
@@ -12,6 +13,10 @@
   padding: 10px 0;
 }
 
+.tablebody img {
+  height: 32px;
+}
+
 .table tbody tr:nth-of-type(odd),
 .table-ip tbody tr:nth-of-type(odd) {
   background-color: #e5eaef;
@@ -20,6 +25,7 @@
 .table-ip {
   width: 50%;
   margin: 0 auto;
+  padding: 8px;
   background-color: #fbfcfc;
   border-radius: 24px;
   text-align: center;
