axios deleted and refactored to fetch and service provider function added

--- a/src/component/provider/provider.css
+++ b/src/component/provider/provider.css
@@ -34,3 +34,12 @@
 .pagination li:hover {
   cursor: pointer;
 }
+
+.timestamp {
+  display: flex;
+}
+
+.timestamp-div {
+  padding: 0 32px;
+  margin-left: 32px;
+}
