navabar colors update with the map

--- a/watchland/src/scss/helpers/_colors.scss
+++ b/watchland/src/scss/helpers/_colors.scss
@@ -1,7 +1,7 @@
 $color-map: (
   "navbg": #232f3e,
   "tawny": #d35400,
-  "gainsboro": #ddd,
+  "gainsboro": #dddddd,
   "rust": #b44a03,
   "light-gray": #d4d2d2,
   "argent": #c1bfbf
