TableItem scss file created and style.scss file deleted

--- a/watchland/src/components/Table/TableItem/TableItem.scss
+++ b/watchland/src/components/Table/TableItem/TableItem.scss
@@ -1,1 +1,76 @@
-.TableItem {}
+@import "../../../scss/helpers/vars";
+@import "../../../scss/helpers/colors";
+
+.table {
+  margin-top: 64px;
+  font-family: $font-family;
+
+  #info {
+    justify-content: center;
+  }
+
+  table {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  thead {
+    display: flex;
+    border-bottom: 2px solid color("argent");
+    background: color("light-gray");
+    width: 100%;
+
+    .table-id {
+      display: flex;
+      justify-content: center;
+      flex: 1;
+    }
+
+    .table-stream {
+      flex: 2;
+    }
+
+    .table-lastEvent {
+      flex: 1;
+    }
+  }
+
+  tbody {
+    width: 100%;
+
+    .info {
+      justify-content: center;
+    }
+
+    .expanded {
+      border-bottom: none;
+    }
+
+    tr {
+      display: flex;
+      padding: 12px 6px 12px 6px;
+      border-bottom: 2px solid color("argent");
+
+      .group-id {
+        display: flex;
+        justify-content: center;
+        flex: 1;
+      }
+      .group-stream {
+        flex: 2;
+      }
+      .group-lastEvent {
+        flex: 1;
+
+        .arrow-right {
+          margin-right: 6px;
+        }
+
+        .arrow-down {
+          margin-right: 6px;
+        }
+      }
+    }
+  }
+}
