--- a/watchland/src/components/Table/TableItem/TableItem.scss
+++ b/watchland/src/components/Table/TableItem/TableItem.scss
@@ -5,14 +5,11 @@
   margin-top: 64px;
   font-family: $font-family;
 
-  #info {
-    justify-content: center;
-  }
-
   table {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 48px;
   }
 
   thead {
