--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -1,16 +1,10 @@
-.connections {
-  display: flex;
-  flex-direction: row-reverse;
-  margin: 12px 0 12px 0;
-
-  button {
-    width: 8rem;
-  }
-
-  label {
-    display: flex;
-    align-items: center;
-    margin: 0;
-    padding-right: 12px;
+.h100{
+  height: 100%;
+}
+.svg-card{
+  // height: 350px;
+  .card-img-top{
+    height: 100px;
+    padding:16px;
   }
 }
